--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="https://www.clubmahindra.com/blog/media/section_images/delhifood-3644ef6f1ea06ff.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Foodie Zone</title>
   </head>
